--- a/src/makefile
+++ b/src/makefile
@@ -13,7 +13,7 @@ LIBS= -lwiringPi
 _DEPS = i2c.h LED_functions.h rpi_xmos_tas_integration.h TAS_functions.h UI_functions.h
 DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
 
-_OBJ = i2c.o LED_functions.o TAS_functions.o UI_functions.o 
+_OBJ = i2c.o LED_functions.o TAS_functions.o UI_functions.o main.o
 OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
 
 $(ODIR)/%.o: %.c $(DEPS)
